--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.18",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
+    "react-useanimations": "^2.10.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
